--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "babyparse": "^0.4.6",
     "bootstrap": "^3.3.7",
     "dsv-loader": "^2.0.0",
-    "fs": "^0.0.1-security",
+    "emojione": "^3.1.2",
     "papaparse": "^4.3.5",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
@@ -14,7 +13,8 @@
     "react-file-reader": "^1.1.1",
     "react-file-reader-input": "^1.1.3",
     "react-router-dom": "^4.1.2",
-    "react-simple-file-input": "^1.0.0"
+    "react-simple-file-input": "^1.0.0",
+    "react-textfit": "^1.0.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.11"
