--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "bootstrap": "^3.3.7",
     "dsv-loader": "^2.0.0",
     "emojione": "^3.1.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.0.3",
     "papaparse": "^4.3.5",
+    "prettier": "^1.5.3",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
@@ -19,7 +22,14 @@
   "devDependencies": {
     "react-scripts": "1.0.11"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write --use-tabs --no-bracket-spacing",
+      "git add"
+    ]
+  },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
