--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
-      "prettier --single-quote --write --use-tabs --no-bracket-spacing",
+      "prettier --single-quote --write --trailing-comma es5 --no-bracket-spacing",
       "git add"
     ]
   },
