--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-emojione3": "^2.0.1",
     "react-file-reader": "^1.1.1",
     "react-file-reader-input": "^1.1.3",
     "react-router-dom": "^4.1.2",
